Bug 499672 - Plasma panel not remembering being floating
Summary: Plasma panel not remembering being floating
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-02-08 06:54 UTC by Robby Engelmann
Modified: 2025-02-15 03:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2025-02-08 06:54:23 UTC
I have the panel on the top and yesterday I recognized, that the panel is not not floating anymore. I changed it back to be floating, but after restart it is not floating again.

Operating System: openSUSE Tumbleweed 20250206
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.13.1-1-default (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i7-13700H
Memory: 62.5 GiB of RAM
Graphics Processor: Intel® Iris® Xe Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO InfinityBook Pro Gen8 (MK1)
Comment 1 Justin Zobel 2025-02-10 09:36:53 UTC
Confirmed on:
Operating System: KDE Linux 202502100256
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.13.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 x Intel(R) Core(TM) i5-10210U CPU @ 1.60GHz
Memory: 7.5 GiB of RAM
Graphics Processor: Intel(R) UHD Graphics

Placed panel at the top, set it to floating (panel and applets). Restarted.
Comment 2 Niccolò Venerandi 2025-02-10 16:53:52 UTC
Git commit be38e2d4d3e7a1901b50e6e69f4dfab43b4d53b9 by Niccolò Venerandi.
Committed on 10/02/2025 at 16:53.
Pushed by niccolove into branch 'master'.

Fix incorrect setFloatingApplets call in panelview

It was incorrectly written as setFloating, which would save the
floatingApplet configuration from the incorrect stored value.

M  +1    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/be38e2d4d3e7a1901b50e6e69f4dfab43b4d53b9