Fix incorrect setFloatingApplets call in panelview

It was incorrectly written as setFloating, which would save the
floatingApplet configuration from the incorrect stored value.

BUG:499672